# rs-esp32c3-slint-st7789-demo

./: Cargo.toml  README.md  build.rs
.cargo/: config.toml
src/: dma.rs  esp32_c3_patch.rs  lib.rs  main.rs
